fixed alignment bug

--- a/src/Header/AboutPage.module.scss
+++ b/src/Header/AboutPage.module.scss
@@ -68,9 +68,10 @@
 .bgImage {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 101%;
     top: 0;
     left: 0;
     z-index: -1;
     object-fit: cover;
 }
+
